--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <p>...</p>
   <p>...</p>
     
-  <img id="eye" src="./export202210111112300400.png" alt="MY IMAGE">
+  <img id="eye" src="file:./export202210131253323760.png" alt="MY IMAGE">
     
 </body>
  
