--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta charset="utf-8">
   <p class="Hello"> Hello there</p>
   <title>test page</title>
-  <img id="eye3" src="https://creazilla-store.fra1.digitaloceanspaces.com/emojis/47030/eye-emoji-clipart-sm.png" alt="electricbugalu eye">
+  <img id="eye3" src="https:"./export202210131252370240.png" alt="electricbugalu eye">
 </head>
 
   <body>
@@ -25,7 +25,7 @@
   <p>...</p>
   <p>...</p>
     
-  <img id="eye" src="https://creazilla-store.fra1.digitaloceanspaces.com/emojis/47030/eye-emoji-clipart-sm.png" alt="MY IMAGE">
+  <img id="eye" src="file:./export202210131253323760.png" alt="MY IMAGE">
     
 </body>
  
@@ -43,7 +43,7 @@
     <li>why not stay here forever{:</li>
     <li>or you could just leave </li>
   </ul>
-  <img id="eye2" src="https://creazilla-store.fra1.digitaloceanspaces.com/emojis/47030/eye-emoji-clipart-sm.png" alt="OH GOD THERE'S 2">
+  <img id="eye2" src="./export202210131252370240.png" alt="OH GOD THERE'S 2">
   <P>why not chose</p>
 <img id="blood" src="https://www.freeiconspng.com/thumbs/horror-png/horror-png-9.png" alt="clown goes here or jester idk"
 <!-- partial -->
