--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta charset="utf-8">
   <p class="Hello"> Hello there</p>
   <title>test page</title>
-  <img id="eye3" src="https:"./export202210131252370240.png" alt="electricbugalu eye">
+  <img id="eye3" src="file:./export202210131252370240.png" alt="electricbugalu eye">
 </head>
 
   <body>
@@ -43,9 +43,9 @@
     <li>why not stay here forever{:</li>
     <li>or you could just leave </li>
   </ul>
-  <img id="eye2" src="./export202210131252370240.png" alt="OH GOD THERE'S 2">
+  <img id="eye2" src="file:./export202210131252370240.png" alt="OH GOD THERE'S 2">
   <P>why not chose</p>
-<img id="blood" src="https://www.freeiconspng.com/thumbs/horror-png/horror-png-9.png" alt="clown goes here or jester idk"
+<img id="blood" src="file:./export202210051154068630.png" alt="clown goes here or jester idk"
 <!-- partial -->
   
 </body>
