--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
   <img id="eye2" src="https://creazilla-store.fra1.digitaloceanspaces.com/emojis/47030/eye-emoji-clipart-sm.png" alt="OH GOD THERE'S 2">
   <P>why not chose</p>
 <img id="blood" src="https://www.freeiconspng.com/thumbs/horror-png/horror-png-9.png" alt="clown goes here or jester idk">
-<a id="NextPage" href="">Page 2</a>
+<a id="NextPage" href="./page2.html">Page 2</a>
 <p></p>
-<a id="Page3" href="">Page 3</a>
+<a id="Page3" href="./page3.html">Page 3</a>
 <!-- partial -->
   
 </body>
