--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - yes</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./page2.css">
 
 </head>
 <body>
