--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <a id="Prev_P" href="">Prev Page</a>
+    <a id="Prev_P" href="./index.html">Prev Page</a>
     <p>someone is finally intrested in my god forsaken stories</p>
     <p>i've been getting desperate</p>
     <p> hhhhmmmm</p>
