--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta charset="utf-8">
   <p class="Hello"> Hello there</p>
   <title>test page</title>
-  <img id="eye3" src="https://creazilla-store.fra1.digitaloceanspaces.com/emojis/47030/eye-emoji-clipart-sm.png" alt="electricbugalu eye">
+  <img id="eye3" src="" alt="electricbugalu eye">
 </head>
 
   <body>
@@ -25,7 +25,7 @@
   <p>...</p>
   <p>...</p>
     
-  <img id="eye" src="https://creazilla-store.fra1.digitaloceanspaces.com/emojis/47030/eye-emoji-clipart-sm.png" alt="MY IMAGE">
+  <img id="eye" src="./export202210131253323760.png?raw=true" alt="MY IMAGE">
     
 </body>
  
