--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <head id="head">
-  <img id="lanter" src=>
+  <img id="lanter" src="./export202210121226303490.png?raw=true">
   <title>yes</title>
   </head>
 
@@ -27,7 +27,7 @@
     <p>hopefully it's not compleate garbage</p>
     <p>welp narrator leaving now</p>
     
-    <img id="smiel" src=>
+    <img id="smiel" src="./export202210061046271310.png?raw=true">
     
 
 </body>
